finalized grid playing field. borders between grid cells to be removed later

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,17 @@
 }
 
 table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+#playing-field {
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+}
+
+#playing-field div {
+  border: 1px solid black;
+
 }
