added function to update turn and function to update playinf field. Also added initial loading of the playing field (with images)..

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,5 +16,9 @@ table, th, td {
 
 #playing-field div {
   border: 1px solid black;
+}
 
+.playing-field-cell img {
+  width: 100px;
+  height: 100px;
 }
